[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/redbackground.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/Kirifont.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=4]
resource_name = "BlackFade"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ClearColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.046875, 0.045884, 0.045884, 1 ), Color( 0.168627, 0.192157, 0.25098, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ClearColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ClearColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.046875, 0.045884, 0.045884, 1 ), Color( 0.0470588, 0.0470588, 0.0470588, 0 ) ]
}

[sub_resource type="Theme" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 936, 301 )
scale = Vector2( 5.14286, 2.85849 )
texture = ExtResource( 1 )

[node name="RedColorRect" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = -1.0
margin_right = 1036.0
margin_bottom = 637.0
color = Color( 0.647059, 0, 0, 1 )

[node name="ClearColorRect" type="ColorRect" parent="."]
margin_left = -18.0
margin_top = -10.0
margin_right = 1034.0
margin_bottom = 630.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlackFade = SubResource( 4 )
anims/RESET = SubResource( 1 )
anims/fade = SubResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -135.0
margin_right = 508.0
margin_bottom = -73.0
size_flags_vertical = 1
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Scary Spooky Escape Room #3"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = 82.0
margin_right = 238.0
margin_bottom = 130.0

[node name="PlayButton" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 157.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Start"

[node name="HelpButton" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 238.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Help"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 480.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
